# RAGsearch

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  rag_llm_search_tool.md
.github/workflows/: ci.yml
app_ui/: README.md  pubspec.yaml
app_ui/test/: widget_test.dart
app_ui/web/: index.html
deploy/: docker-compose.deploy.yml
src/app/: __init__.py  api.py  classifier.py  config.py  ingest.py  llm.py  vectorstore.py
src/app/text/: converter.py
static/: .last_build_id  flutter_bootstrap.js  index.html  main.dart.js  version.json
static/assets/: NOTICES
tests/: api_tests.py  classifier_tests.py  config_tests.py  converter_tests.py  llm_tests.py  vectorstore_tests.py
